gcc/testsuite/g++.old-deja/g++.mike/warn4.C
// { dg-do assemble  }
void foo (int a, int a) { }	// { dg-error "" } 
